--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,12 +31,14 @@
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.11",
     "@types/bcrypt": "^6.0.0",
+    "@types/nodemailer": "^7.0.5",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "date-fns": "^4.1.0",
     "ioredis": "^5.8.2",
+    "nodemailer": "^7.0.12",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
