--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,9 +33,11 @@
     "@types/bcrypt": "^6.0.0",
     "@types/nodemailer": "^7.0.5",
     "@types/passport-jwt": "^4.0.1",
+    "@types/streamifier": "^0.1.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "cloudinary": "^2.9.0",
     "date-fns": "^4.1.0",
     "ioredis": "^5.8.2",
     "nodemailer": "^7.0.12",
@@ -46,6 +48,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.3",
+    "streamifier": "^0.1.1",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
@@ -56,6 +59,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
